tests/ui/async-await/async-error-span.drop_tracking_mir.stderr
error[E0277]: `()` is not a future
  --> $DIR/async-error-span.rs:10:20
   |
LL | fn get_future() -> impl Future<Output = ()> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not a future
   |
   = help: the trait `Future` is not implemented for `()`
   = note: () must be a future or must implement `IntoFuture` to be awaited

error[E0282]: type annotations needed
  --> $DIR/async-error-span.rs:16:9
   |
LL |     let a;
   |         ^
   |
help: consider giving `a` an explicit type
   |
LL |     let a: /* Type */;
   |          ++++++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0282.
For more information about an error, try `rustc --explain E0277`.
